Add further lines to template to test more functionality.

--- a/test/support/template.erb
+++ b/test/support/template.erb
@@ -1,3 +1,8 @@
 This is the test template.
 
-<%= @object.value -%>
+<%= foreground('#5f00af') %><%= object.value %>
+<%= background('#ffff00') %><%= object.value %>
+<%= foreground('#ff8700') %><%= background('#ffff00') %><%= object.value %>
+<%= style('underline') %><%= object.value %>
+
+Some more content...
