Move configuration.rb to configuration.erb so we can populate some of it.

--- a/lib/vedeu/generator/templates/application/config/configuration.erb
+++ b/lib/vedeu/generator/templates/application/config/configuration.erb
@@ -1,5 +1,5 @@
 Vedeu.configure do
-  # log         '/tmp/your_app.log'
+  log         "/tmp/<%= object.name %>.log"
   # debug!
   # drb!
   # drb_host    'localhost'
