Append class type to client application controllers, helpers and views.

--- a/lib/vedeu/generator/templates/application/app/controllers/name.erb
+++ b/lib/vedeu/generator/templates/application/app/controllers/name.erb
@@ -1,6 +1,8 @@
+require_relative 'application_controller'
+
 module <%= object.app_name %>
 
-  class <%= object.name_as_class %> < <%= object.app_name -%>::ApplicationController
+  class <%= object.name_as_class %>Controller < <%= object.app_name -%>::ApplicationController
 
     def initialize
     end
