--- a/lib/vedeu/generator/templates/application/app/helpers/name.erb
+++ b/lib/vedeu/generator/templates/application/app/helpers/name.erb
@@ -1,6 +1,6 @@
 module <%= object.app_name %>
 
-  module <%= object.name_as_class %>
+  module <%= object.name_as_class %>Helper
 
     include <%= object.app_name -%>::ApplicationHelper
 
