--- a/lib/vedeu/generator/templates/application/app/views/name.erb
+++ b/lib/vedeu/generator/templates/application/app/views/name.erb
@@ -1,6 +1,6 @@
 module <%= object.app_name %>
 
-  class <%= object.name_as_class %> < Vedeu::ApplicationView
+  class <%= object.name_as_class %>View < Vedeu::ApplicationView
 
     def render
       Vedeu.renders do
