--- a/lib/vedeu/generator/templates/application/app/views/name.erb
+++ b/lib/vedeu/generator/templates/application/app/views/name.erb
@@ -4,7 +4,21 @@ module <%= object.app_name %>
 
     def render
       Vedeu.renders do
-        template_for('<%= object.name %>', template, object, options)
+
+        # Build up the view programmatically...
+        #
+        # view '<%= object.name %>' do
+        #   lines do
+        #     line 'some content...'
+        #   end
+        # end
+
+        # ...or use the template in 'app/views/templates/<%= object.name %>'
+        #
+        template_for('<%= object.name %>',
+                     template('<%= object.name %>'),
+                     object,
+                     options)
       end
     end
 
