Add #disable! and #enable! to Border.

--- a/lib/vedeu/generator/templates/application/app/views/interfaces/name.erb
+++ b/lib/vedeu/generator/templates/application/app/views/interfaces/name.erb
@@ -5,6 +5,12 @@ Vedeu.interface '<%= object.name %>' do
     # style  'normal'
 
     # Define visibility of border
+    #
+    # Uncomment one of these:
+    # enable!
+    # disable!
+    #
+    # Individually control each border:
     # show_bottom!
     # show_left!
     # show_right!
