Transition to use Thor for basic setup.

--- a/lib/vedeu/generator/templates/application/app/views/interfaces/name.erb
+++ b/lib/vedeu/generator/templates/application/app/views/interfaces/name.erb
@@ -48,6 +48,12 @@ Vedeu.interface '<%= object.name %>' do
     # width  10
   # end
 
+  # group ''
+
+  # hide!
+
+  # show!
+
   # style
 
   # zindex
