--- a/lib/vedeu/cli/generator/templates/application/app/controllers/name.erb
+++ b/lib/vedeu/cli/generator/templates/application/app/controllers/name.erb
@@ -5,6 +5,8 @@ module <%= object.app_name %>
 
   class <%= object.name_as_class %>Controller < <%= object.app_name -%>::ApplicationController
 
+    controller_name <%= object.app_name -%>
+
     def initialize
       <%= object.app_name %>::<%= object.name_as_class %>View.render(object)
     end
