Set colours to 16_777_216 by default for client applications.

--- a/lib/vedeu/cli/generator/templates/application/config/configuration.erb
+++ b/lib/vedeu/cli/generator/templates/application/config/configuration.erb
@@ -1,5 +1,8 @@
 Vedeu.configure do
   log         "/tmp/<%= object.name %>.log"
+
+  colour_mode 16_777_216
+
   # debug!
   # drb!
   # drb_host    'localhost'
