Add more documentation.

--- a/lib/vedeu/cli/generator/templates/application/config/configuration.erb
+++ b/lib/vedeu/cli/generator/templates/application/config/configuration.erb
@@ -3,7 +3,7 @@ Vedeu.configure do
 
   colour_mode 16_777_216
 
-  # debug!
+  # debug! # Add "gem 'ruby-prof'" to your Gemfile if uncommenting this line.
   # drb!
   # drb_host    'localhost'
   # drb_port    21420
