Add options to hide specific border sides.

--- a/lib/vedeu/cli/generator/templates/application/app/views/interfaces/name.erb
+++ b/lib/vedeu/cli/generator/templates/application/app/views/interfaces/name.erb
@@ -11,6 +11,10 @@ Vedeu.interface '<%= object.name %>' do
     # disable!
     #
     # Individually control each border:
+    # hide_bottom!
+    # hide_left!
+    # hide_right!
+    # hide_top!
     # show_bottom!
     # show_left!
     # show_right!
