Add configuration option to enable/disable compression.

--- a/lib/vedeu/cli/generator/templates/application/config/configuration.erb
+++ b/lib/vedeu/cli/generator/templates/application/config/configuration.erb
@@ -4,6 +4,8 @@ Vedeu.configure do
   # colour_mode 16_777_216 # Some terminals don't render colour at all if this
                            # value is not one of 8, 16, 256 or 16777216.
 
+  # compression false
+
   # debug! # Add "gem 'ruby-prof'" to your Gemfile if uncommenting this line.
   # drb!
   # drb_host    'localhost'
