Add delay to generated configuration for a client application interface;
Also, add more documentation.

--- a/lib/vedeu/cli/generator/templates/application/app/views/interfaces/name.erb
+++ b/lib/vedeu/cli/generator/templates/application/app/views/interfaces/name.erb
@@ -38,6 +38,9 @@ Vedeu.interface '<%= object.name %>' do
 
   # cursor!
 
+  # See Vedeu::DSL::Interface#delay
+  # delay 1.0
+
   # focus!
 
   # foreground
