Add more documentation; Also, add .goto to the Vedeu API.

--- a/lib/vedeu/cli/generator/templates/application/application.erb
+++ b/lib/vedeu/cli/generator/templates/application/application.erb
@@ -1,5 +1,5 @@
 require_relative 'config/configuration'
-# Uncomment this, if you are manually setting the entry point below
+# When manually setting the entry point below, uncomment this line:
 # require_relative 'app/controllers/some_controller'
 
 module <%= object.name_as_class %>
