--- a/lib/vedeu/cli/generator/templates/application/config/configuration.erb
+++ b/lib/vedeu/cli/generator/templates/application/config/configuration.erb
@@ -1,12 +1,12 @@
 Vedeu.configure do
   # base_path
 
-  # colour_mode 16_777_216 # Some terminals don't render colour at all if this
+  # colour_mode 16_777_216 # Some terminals don't render colour at all when this
                            # value is not one of 8, 16, 256 or 16777216.
 
   # compression false
 
-  # debug! # Add "gem 'ruby-prof'" to your Gemfile if uncommenting this line.
+  # debug! # Requires "gem 'ruby-prof'" in your Gemfile.
   # drb!
   # drb_host    'localhost'
   # drb_port    21420
