Minor refactor to the client application controller template;
Remove the #initialize method since the ApplicationController
for the client application will handle this (or Vedeu will).
Remove (*args) from the #show method since the ApplicationController
makes the params available.
Remove the private method #object since it is unused.

--- a/lib/vedeu/cli/generator/templates/application/app/controllers/name.erb
+++ b/lib/vedeu/cli/generator/templates/application/app/controllers/name.erb
@@ -10,20 +10,11 @@ module <%= object.app_name %>
     action :show
     # add more actions and implement or remove existing actions
 
-    def initialize
-    end
-
     def list
     end
 
-    def show(*args)
-      <%= object.app_name %>::<%= object.name_as_class %>View.render(*args)
-    end
-
-    private
-
-    def object
-      nil
+    def show
+      <%= object.app_name %>::<%= object.name_as_class %>View.render(params)
     end
 
   end
